# MARCEL_src

./: .gitmodules  README.md
Arduino/: read_serial.h
Arduino/libraries/elapsedMicros/: elapsedMicros.h
RaspberryPi/: nav_node.service
RaspberryPi/rover_ctrl/: CMakeLists.txt  package.xml
RaspberryPi/rover_ctrl/launch/: ft_sensors.launch  nav_sensors.launch
RaspberryPi/rover_ctrl/msg/: Joints_info.msg  Rov_ctrl.msg
RaspberryPi/rover_ctrl/scripts/: crawling_gait.py  keyboard_cmd.py  keyboard_ctrl.py  load_distribution.py  simple_keyboard_ctrl.py
RaspberryPi/rover_ctrl/src/: cmd_mt.cpp  filters2.hh  gpio_access.h  nav_node.cpp  read_state.cpp
Remote/scripts/: plot_experiment.sh  rover_ssh  rover_sshfs  rover_sync_date
Teensy/teensyduino/: load_teensy.sh  preferences_teensy.txt
Teensy/teensyduino/rover_code/: filters2.hh  rover_code.ino
