<package format="2">
	<name>rover_ctrl</name>
	<version>1.0.0</version>
	<description>
	This package provides nodes to drive the rover's wheels and internal actuation.
	</description>
	<maintainer email="a.bouton@surrey.ac.uk">Arthur Bouton</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
